--- a/.prettierignore
+++ b/.prettierignore
@@ -38,5 +38,5 @@ next-env.d.ts
 # PWA
 /public/sw.js
 /pubilc/sw.js.map
-/public/workbox-*.js
-/public/workbox-*.js.map
+/pubilc/workbox-*.js
+/pubilc/workbox-*.js.map
