--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ yarn-error.log*
 next-env.d.ts
 
 # PWA
-/public/sw.js
-/pubilc/sw.js.map
-/public/workbox-*.js
-/public/workbox-*.js.map
+/nostatic/sw.js
+/nostatic/sw.js.map
+/nostatic/workbox-*.js
+/nostatic/workbox-*.js.map
