--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "node server.mjs",
 		"build": "next build",
-		"start": "NODE_ENV=PRODUCTION node server.mjs",
+		"start": "NODE_ENV=production node server.mjs",
 		"lint:next": "next lint",
 		"lint:prettier": "prettier . --write",
 		"lint": "concurrently \"npm:lint:*\""
@@ -14,17 +14,18 @@
 		"@headlessui/react": "^1.7.13",
 		"@murkrage/next-pwa": "^5.7.1",
 		"bufferutil": "^4.0.7",
-		"chalk": "^5.2.0",
+		"express": "^4.18.2",
 		"next": "13.2.4",
-		"png-img": "file:png-img",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-zoom-pan-pinch": "^3.0.6",
 		"socket.io": "^4.6.1",
 		"socket.io-client": "^4.6.1",
-		"utf-8-validate": "^5.0.10"
+		"utf-8-validate": "^5.0.10",
+		"png-img": "^5.0.1"
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.17",
 		"@types/node": "^18.15.11",
 		"@types/react": "^18.0.31",
 		"@types/react-dom": "^18.0.11",
