--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.13",
-		"@murkrage/next-pwa": "^5.7.1",
 		"bufferutil": "^4.0.7",
 		"express": "^4.18.2",
 		"next": "13.2.4",
+		"png-img": "^5.0.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-zoom-pan-pinch": "^3.0.6",
 		"socket.io": "^4.6.1",
 		"socket.io-client": "^4.6.1",
-		"utf-8-validate": "^5.0.10",
-		"png-img": "^5.0.1"
+		"utf-8-validate": "^5.0.10"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.17",
