--- a/package.json
+++ b/package.json
@@ -11,32 +11,32 @@
 		"lint": "concurrently \"npm:lint:*\""
 	},
 	"dependencies": {
-		"@headlessui/react": "^1.7.13",
+		"@headlessui/react": "^1.7.15",
 		"bufferutil": "^4.0.7",
 		"express": "^4.18.2",
-		"next": "13.2.4",
+		"next": "^13.4.10",
 		"png-img": "^5.0.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-zoom-pan-pinch": "^3.0.6",
-		"socket.io": "^4.6.1",
-		"socket.io-client": "^4.6.1",
-		"utf-8-validate": "^5.0.10"
+		"react-zoom-pan-pinch": "^3.1.0",
+		"socket.io": "^4.7.1",
+		"socket.io-client": "^4.7.1",
+		"utf-8-validate": "^6.0.3"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.17",
-		"@types/node": "^18.15.11",
-		"@types/react": "^18.0.31",
-		"@types/react-dom": "^18.0.11",
+		"@types/node": "^20.4.2",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
 		"autoprefixer": "^10.4.14",
-		"concurrently": "^8.0.1",
-		"eslint": "^8.37.0",
-		"eslint-config-next": "^13.2.4",
-		"postcss": "^8.4.21",
-		"prettier": "^2.8.7",
-		"prettier-plugin-organize-imports": "^3.2.2",
-		"prettier-plugin-tailwindcss": "^0.2.6",
-		"tailwindcss": "^3.3.1",
-		"typescript": "^5.0.3"
+		"concurrently": "^8.2.0",
+		"eslint": "^8.45.0",
+		"eslint-config-next": "^13.4.10",
+		"postcss": "^8.4.26",
+		"prettier": "^3.0.0",
+		"prettier-plugin-organize-imports": "^3.2.3",
+		"prettier-plugin-tailwindcss": "^0.4.1",
+		"tailwindcss": "^3.3.3",
+		"typescript": "^5.1.6"
 	}
 }
