--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "pngjs": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-zoom-pan-pinch": "3.1.1",
+    "react-zoom-pan-pinch": "3.2.0",
     "sharp": "^0.32.6"
   },
   "devDependencies": {
@@ -32,7 +32,7 @@
     "postcss": "^8.4.26",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "^3.2.3",
-    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prettier-plugin-tailwindcss": "0.5.6",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   }
