--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "pngjs": "^7.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-zoom-pan-pinch": "3.1.1",
+    "react-zoom-pan-pinch": "3.1.0",
     "sharp": "^0.32.6"
   },
   "devDependencies": {
@@ -29,6 +29,7 @@
     "concurrently": "^8.2.0",
     "eslint": "^8.45.0",
     "eslint-config-next": "^13.4.10",
+    "node": "^20.7.0",
     "postcss": "^8.4.26",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "^3.2.3",
